# smsru

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  PLANS.md  README.md  SPEC.md
examples/: Cargo.toml  call_auth.rs  callback_add.rs  callback_del.rs  callback_get.rs  check_auth.rs  check_cost.rs  check_status.rs  get_balance.rs  get_free_usage.rs  get_limit_usage.rs  get_senders.rs  send_sms.rs  stoplist_add.rs  stoplist_del.rs  stoplist_get.rs
src/: lib.rs
src/client/: mod.rs
src/domain/: mod.rs  request.rs  response.rs  validation.rs  value.rs
src/transport/: account.rs  callback.rs  callcheck_add.rs  callcheck_status.rs  check_cost.rs  check_status.rs  mod.rs  money.rs  send_sms.rs  stoplist.rs
