[package]
name = "smsru"
version = "0.1.0"
edition = "2024"

[dependencies]
phonenumber = "0.3"
reqwest = { version = "0.13.1", default-features = false, features = [
    "form",
    "json",
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
