[package]
name = "smsru"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Typed Rust client for the SMS.RU HTTP API."
license = "MIT"
readme = "README.md"
repository = "https://github.com/matrizaev/smsru"
homepage = "https://github.com/matrizaev/smsru"
documentation = "https://docs.rs/smsru"
keywords = ["sms", "smsru", "sms-ru", "api", "client"]
categories = ["api-bindings"]
include = [
    "Cargo.toml",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "examples/**",
    "src/**",
]

[dependencies]
phonenumber = "0.3"
reqwest = { version = "0.13.1", default-features = false, features = [
    "form",
    "json",
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread"] }
